@@ -8,6 +8,8 @@
 	  device/lib/incl.mk,
 	  support/regression/tests/wchar.c:
 	  Implement c16rtomb(), mbrtoc16(), mbsinit().
+	* device/lib/*/mul.s
+	  Integer multiplication improvement by Kio (RFE #422).
 
 2016-04-12 Molnar Karoly <molnarkaroly AT users.sf.net>
 
